# latex-problem-template

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run.py  wsgi.py
app/: __init__.py
app/static/: style.css
app/templates/: base.html
app/templates/error404/: layout.html
app/templates/home/: layout.html
app/templates/solution-templates/: layout.html
app/templates/template-generator/: layout.html
app/templates/templates/: layout.html
app/views/: error404.py  home.py  solution_templates.py  template_generator.py  templates.py
latex_problem_template/: __init__.py  generate.py  latex_escape.py  parse.py  strip_comments.py  template.py  types.py
solution_templates/: __init__.py  generate.py  latex_escape.py  parse.py  strip_comments.py  template.py  types.py
tests/: test.tex  test1answer.txt  test_latex_escape.py  test_latex_problem_template.py  test_strip_comments.py
