[tool.poetry]
name = "template-generator"
version = "0.1.0"
description = "Flask app to generate templates for homework solutions"
authors = ["Thomas Breydo <tbreydo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
TexSoup = "^0.3.1"
Flask = "^1.1.2"
ply = "^3.11"
gunicorn = "^20.0.4"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]
bump2version = "^1.0.1"
black = "^20.8b1"
mypy = "^0.790"
Sphinx = "^3.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
